feat: add dish and order specifications
